--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TechConsult - Ruby on Rails & ReactJS Development Experts</title>
+    <title>RailsDev - Ruby on Rails & ReactJS Development Experts</title>
     <meta name="description" content="Expert consulting in Ruby on Rails and ReactJS development. Building scalable, high-performance web applications for startups and enterprises." />
     <meta name="author" content="TechConsult" />
 
-    <meta property="og:title" content="TechConsult - Ruby on Rails & ReactJS Development" />
+    <meta property="og:title" content="RailsDev - Ruby on Rails & ReactJS Development" />
     <meta property="og:description" content="Expert consulting in Ruby on Rails and ReactJS development. Building scalable web applications." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://rails-dev.com/src/assets/logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@ksokmesa" />
+    <meta name="twitter:image" content="https://rails-dev.com/src/assets/logo.png" />
   </head>
 
   <body>
